# cronch

./: CMakeLists.txt  README.md
data/: attribution.txt  theme.txt
data/sheets/: chomps.txt  player.txt  puff.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  animated_sprite.cpp  animated_sprite.hpp  context.hpp  frame.hpp  io.cpp  io.hpp  resource_map.cpp  resource_map.hpp  resources.cpp  resources.hpp
src/game/: CMakeLists.txt  chomp_type.hpp  event.hpp  hit_result.hpp  lane.hpp  layout.hpp  score.hpp  theme.cpp  theme.hpp  world.cpp  world.hpp
src/game/attachments/: CMakeLists.txt  autoplay.cpp  autoplay.hpp  background.cpp  background.hpp  board.cpp  board.hpp  chomper.cpp  chomper.hpp  controller.cpp  controller.hpp  coordinator.cpp  coordinator.hpp  dispatch.cpp  dispatch.hpp  hud.cpp  hud.hpp  player.cpp  player.hpp  prop.hpp  renderer.hpp  shared_prop.hpp  vfx.cpp  vfx.hpp  wave.cpp  wave.hpp
src/util/: CMakeLists.txt  cache.hpp  common.hpp  enum_array.hpp  index_timeline.cpp  index_timeline.hpp  logger.cpp  logger.hpp  pool.hpp  property.cpp  property.hpp  random.hpp
